--- a/src/site.config.json
+++ b/src/site.config.json
@@ -1,9 +1,9 @@
 {
-  "title": "Blog",
-  "description": "my blog",
-  "author": "Noname Nanashi",
+  "title": "potof",
+  "description": "プログラミングのメモ帳",
+  "author": "potof",
   "twitter": "https://twitter.com/Potof_",
-  "github": "https://github.com/potof/blog-dev",
-  "url": "",
+  "github": "https://github.com/potof/dev.potof.net",
+  "url": "https://dev.potof.net/",
   "gtag": "UA-XXXXXXXX-X"
 }
