--- a/src/site.config.json
+++ b/src/site.config.json
@@ -5,7 +5,7 @@
   "twitter": "https://twitter.com/Potof_",
   "github": "https://github.com/potof/dev.potof.net",
   "url": "https://dev.potof.net/",
-  "gtag": "UA-XXXXXXXX-X",
+  "gtag": "G-JQP5KW497M",
   "isViewRelatedPosts": true,
   "relatedPostsMaxCount": 3
 }
